feat(media): add lazy loading to media thumbnails for improved performance

--- a/src/app/pages/media/media.component.html
+++ b/src/app/pages/media/media.component.html
@@ -57,7 +57,7 @@
             @for (item of images(); track item.sha256) {
               <div class="media-card" [class.selected]="isSelected(item.sha256)" (click)="toggleItemSelection(item.sha256)">
                 <div class="media-thumbnail">
-                  <img [src]="item.url" [alt]="item.url || 'Image'" (click)="navigateToDetails($event, item)">
+                  <img [src]="item.url" [alt]="item.url || 'Image'" (click)="navigateToDetails($event, item)" loading="lazy">
                   <div class="selection-indicator">
                     <mat-icon>check_circle</mat-icon>
                   </div>
@@ -97,7 +97,7 @@
             @for (item of videos(); track item.sha256) {
               <div class="media-card" [class.selected]="isSelected(item.sha256)" (click)="toggleItemSelection(item.sha256)">
                 <div class="media-thumbnail">
-                  <img [src]="item.url || 'assets/video-placeholder.jpg'" [alt]="item.url || 'Video'" (click)="navigateToDetails($event, item)">
+                  <img [src]="item.url || 'assets/video-placeholder.jpg'" [alt]="item.url || 'Video'" (click)="navigateToDetails($event, item)" loading="lazy">
                   <mat-icon class="video-badge">play_circle_filled</mat-icon>
                   <div class="selection-indicator">
                     <mat-icon>check_circle</mat-icon>
@@ -138,7 +138,7 @@
             @for (item of images(); track item.sha256) {
               <div class="media-card" [class.selected]="isSelected(item.sha256)" (click)="toggleItemSelection(item.sha256)">
                 <div class="media-thumbnail">
-                  <img [src]="item.url" [alt]="item.url || 'File'" (click)="navigateToDetails($event, item)">
+                  <img [src]="item.url" [alt]="item.url || 'File'" (click)="navigateToDetails($event, item)" loading="lazy">
                   <div class="selection-indicator">
                     <mat-icon>check_circle</mat-icon>
                   </div>
