--- a/src/app/pages/media/media.component.html
+++ b/src/app/pages/media/media.component.html
@@ -96,9 +96,9 @@
           <div class="media-grid">
             @for (item of videos(); track item.sha256) {
               <div class="media-card" [class.selected]="isSelected(item.sha256)" (click)="toggleItemSelection(item.sha256)">
-                <div class="media-thumbnail">
-                  <img [src]="item.url || 'assets/video-placeholder.jpg'" [alt]="item.url || 'Video'" (click)="navigateToDetails($event, item)" loading="lazy">
-                  <mat-icon class="video-badge">play_circle_filled</mat-icon>
+                <div class="media-thumbnail video-thumbnail">
+                  <mat-icon class="video-icon">play_circle_filled</mat-icon>
+                  <div class="video-name">{{ getFileName(item.url) }}</div>
                   <div class="selection-indicator">
                     <mat-icon>check_circle</mat-icon>
                   </div>
